--- a/espanso/match/base.yml
+++ b/espanso/match/base.yml
@@ -6,7 +6,7 @@ matches:
       - name: mydate
         type: date
         params:
-          format: "%m/%d/%Y"
+          format: "%d/%m/%Y"
 
 # get my ipv4
   - trigger: ":ip"
