--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -17,68 +17,99 @@
 ;==========================================================
 
 [colors]
-background = #282A2E
+background = #2d353b
 background-alt = #373B41
-foreground = #C5C8C6
-primary = #F0C674
+foreground = #F3F5D9
+primary = #b9cef8
+pink = #f1739d
+blue = #7FBBB3
+yellow = #dbbc7f
+inactive = #859289
 secondary = #8ABEB7
 alert = #A54242
 disabled = #707880
 
-[bar/bar1]
-width = 100%
-height = 24pt
-radius = 6
+# This is to set the distance between the modules
+[padding]
+modules = 20px
 
-; dpi = 96
+# Gradient Set-up
+[gradient]
+color-1 = #9DA9A0
+color-2 = #859289 
+color-3 = #475258 
+# color 1 for clock background
+# color 2 for first modules
+# color 3 for second modules
+
+[bar/example]
+width = 100%
+height = 30 pt
+radius = 10
+# offset-y = 6
+# offset-x = 0.5%
+border-color = #00000000
+border-left-size = 15
+border-right-size = 15
+border-top-size = 15
+
+# dpi = 96
+
+override-redirect = false
 
 background = ${colors.background}
 foreground = ${colors.foreground}
 
 line-size = 3pt
 
-border-size = 4pt
-border-color = #00000000
+# border-size = 4pt
+# border-color = #00000000
 
-padding-left = 0
+padding-left = 1
 padding-right = 1
 
-module-margin = 1
+module-margin = 0
 
-separator = |
-separator-foreground = ${colors.disabled}
+# separator = |
+# separator = 󰇙
+# separator-foreground = ${colors.disabled}
 
-font-0 = monospace;2
+# This character ; next to the fonts decides the vertical alignment.
+# So the bigger the number after the ; , the lower the content will be.
 
-modules-left = xworkspaces xwindow
-modules-right = filesystem pulseaudio xkeyboard memory cpu wlan eth date
+font-0 = JetBrainsMonoNerdFont-Bold:weight=bold:size=14;2
+font-1 = JetBrainsMonoNerdFont-Bold:weight=bold:size=16;2
+font-2 = JetBrainsMonoNerdFont-Bold:weight=bold:size=32;2
+font-3 = Roboto:style=black:size=15;4
+font-4 = Roboto:style=black:size=13;2
 
-cursor-click = pointer
-cursor-scroll = ns-resize
+modules-left = xworkspaces usdrate eurrate xwindow
+modules-center = text5 text3 text1 date text2 text4 text6
+modules-right = filesystem pulseaudio backlight xkeyboard memory cpu wlan eth battery battery2 battery3
+
+# cursor-click = pointer
+# cursor-scroll = ns-resize
 
 enable-ipc = true
 
-; wm-restack = generic
-; wm-restack = bspwm
-; wm-restack = i3
+# tray-position = right
 
-; override-redirect = true
+# wm-restack = generic
+# wm-restack = bspwm
+# wm-restack = i3
 
-[module/systray]
-type = internal/tray
-
-format-margin = 8pt
-tray-spacing = 16pt
+# override-redirect = true
 
 [module/xworkspaces]
 type = internal/xworkspaces
+pin-workspaces = true
 
 label-active = %name%
-label-active-background = ${colors.background-alt}
-label-active-underline= ${colors.primary}
+label-active-foreground = ${colors.yellow}
 label-active-padding = 1
 
 label-occupied = %name%
+label-occupied-foreground = ${colors.inactive}
 label-occupied-padding = 1
 
 label-urgent = %name%
@@ -89,58 +120,61 @@ label-empty = %name%
 label-empty-foreground = ${colors.disabled}
 label-empty-padding = 1
 
-[module/xwindow]
-type = internal/xwindow
-label = %title:0:60:...%
-
-[module/filesystem]
-type = internal/fs
-interval = 25
-
-mount-0 = /
-
-label-mounted = %{F#F0C674}%mountpoint%%{F-} %percentage_used%%
-
-label-unmounted = %mountpoint% not mounted
-label-unmounted-foreground = ${colors.disabled}
-
 [module/pulseaudio]
 type = internal/pulseaudio
 
-format-volume-prefix = "VOL "
-format-volume-prefix-foreground = ${colors.primary}
+format-volume-prefix = " "
+format-volume-prefix-foreground = ${colors.yellow}
 format-volume = <label-volume>
 
 label-volume = %percentage%%
+label-volume-padding-right = ${padding.modules}
+label-volume-padding-left = 1
 
 label-muted = muted
 label-muted-foreground = ${colors.disabled}
+label-muted-padding-right = ${padding.modules}
+label-muted-padding-left = 1
 
-[module/xkeyboard]
-type = internal/xkeyboard
-blacklist-0 = num lock
+# [module/xkeyboard]
+# type = internal/xkeyboard
+# blacklist-0 = num lock
 
-label-layout = %layout%
-label-layout-foreground = ${colors.primary}
+# label-layout = %layout%
+# label-layout-foreground = ${colors.primary}
 
-label-indicator-padding = 2
-label-indicator-margin = 1
-label-indicator-foreground = ${colors.background}
-label-indicator-background = ${colors.secondary}
+# label-indicator-padding = 2
+# label-indicator-margin = 1
+# label-indicator-foreground = ${colors.background}
+# label-indicator-background = ${colors.secondary}
 
-[module/memory]
-type = internal/memory
-interval = 2
-format-prefix = "RAM "
-format-prefix-foreground = ${colors.primary}
-label = %percentage_used:2%%
+# [module/memory]
+# type = internal/memory
+# interval = 2
+# format-prefix = "RAM "
+# format-prefix-foreground = ${colors.primary}
+# label = %percentage_used:2%%
+
+
+[module/backlight]
+type = internal/backlight
+card = amdgpu_bl0
+use-actual-brightness = true
+enable-scroll = true
+
+format = <label>
+format-prefix = "󰃠  "
+format-prefix-foreground = ${colors.yellow}
+label = %percentage%%
+label-padding-right = ${padding.modules}
+label-font = 5
 
 [module/cpu]
-type = internal/cpu
-interval = 2
-format-prefix = "CPU "
-format-prefix-foreground = ${colors.primary}
-label = %percentage:2%%
+# type = internal/cpu
+# interval = 2
+# format-prefix = "CPU "
+# format-prefix-foreground = ${colors.primary}
+# label = %percentage:2%%
 
 [network-base]
 type = internal/network
@@ -149,25 +183,122 @@ format-connected = <label-connected>
 format-disconnected = <label-disconnected>
 label-disconnected = %{F#F0C674}%ifname%%{F#707880} disconnected
 
+
 [module/wlan]
 inherit = network-base
 interface-type = wireless
-label-connected = %{F#F0C674}%ifname%%{F-} %essid% %local_ip%
+format-connected-prefix = "%{F#dbbc7f}󰖩%{F-}  "
+label-connected = On
+label-connected-padding-right = ${padding.modules}
+label-connected-font = 5
 
 [module/eth]
 inherit = network-base
 interface-type = wired
 label-connected = %{F#F0C674}%ifname%%{F-} %local_ip%
 
+######################################
+#######    Date/Time Gradient  #######
+
+[module/text1]
+type = custom/text
+content = ""
+content-foreground = ${gradient.color-1}
+content-background = ${gradient.color-2}
+content-font = 3
+
+[module/text2]
+type = custom/text
+content = ""
+content-foreground = ${gradient.color-1}
+content-background = ${gradient.color-2}
+content-font = 3
+
+[module/text3]
+type = custom/text
+content = ""
+content-foreground = ${gradient.color-2}
+content-background = ${gradient.color-3}
+content-font = 3
+
+[module/text4]
+type = custom/text
+content = ""
+content-foreground = ${gradient.color-2}
+content-background = ${gradient.color-3}
+content-font = 3
+
+[module/text5]
+type = custom/text
+content = ""
+content-foreground = ${gradient.color-3}
+content-font = 3
+
+[module/text6]
+type = custom/text
+content = ""
+content-foreground = ${gradient.color-3}
+content-font = 3
+
+######################################
+#######    Date/Time Gradient  #######
+
 [module/date]
 type = internal/date
 interval = 1
 
 date = %H:%M
-date-alt = %Y-%m-%d %H:%M:%S
+date-alt = "  %a %d %b - %I:%M %p  "
 
-label = %date%
-label-foreground = ${colors.primary}
+label = "  %date%  "
+label-foreground = ${colors.background}
+label-background = #9DA9A0
+label-font = 4
+
+[module/battery]
+type = internal/battery
+battery = BAT0
+adapter = ADP0
+time-format = %H:%m
+format-charging-prefix ="%{F#dbbc7f}%{F-}  "
+label-charging = %percentage%%
+label-charging-padding-right = ${padding.modules}
+label-charging-font = 5
+
+format-discharging-prefix ="%{F#dbbc7f}%{F-}  "
+label-discharging = %percentage%%
+label-discharging-padding-right = ${padding.modules}
+label-discharging-font = 5
+
+[module/battery2]
+type = internal/battery
+battery = BAT0
+adapter = ADP0
+time-format = %H:%M
+format-charging-prefix = "%{F#dbbc7f}󰜷%{F-} "
+label-charging = %consumption%W
+label-charging-padding-right = ${padding.modules}
+label-charging-font = 5
+
+format-discharging-prefix = "%{F#dbbc7f}󰜮%{F-} "
+label-discharging = %consumption%W
+label-discharging-padding-right = ${padding.modules}
+label-discharging-font = 5
+
+[module/battery3]
+type = internal/battery
+battery = BAT0
+adapter = ADP0
+time-format = %H:%M
+format-charging-prefix = "%{F#dbbc7f}%{F-}  "
+label-charging = charging
+label-charging-padding-right = 1
+label-charging-font = 5
+
+format-discharging-prefix = "%{F#dbbc7f}%{F-}  "
+label-discharging = %time%
+label-discharging-padding-right = 1
+label-discharging-font = 5
 
 [settings]
 screenchange-reload = true
