--- a/i3/config
+++ b/i3/config
@@ -26,7 +26,7 @@ exec --no-startup-id dex-autostart --autostart --environment i3
 # The combination of xss-lock, nm-applet and pactl is a popular choice, so
 # they are included here as an example. Modify as you see fit.
 
-# xss-lock grabs a logind suspend inhibit lock and will use i3lock to lock the
+# xss-lock grabs agind suspend inhibit lock and will use i3lock to lock the
 # screen before suspend. Use loginctl lock-session to lock your screen.
 exec --no-startup-id xss-lock --transfer-sleep-lock -- i3lock --nofork
 
@@ -36,6 +36,9 @@ exec --no-startup-id nm-applet
 
 # Start polybar
 exec_always --no-startup-id ~/.config/polybar/launch.sh
+
+# Picom
+exec --no-startup-id picom
 
 # Use pactl to adjust volume in PulseAudio.
 set $refresh_i3status killall -SIGUSR1 i3status
@@ -60,7 +63,8 @@ bindsym $mod+Shift+q kill
 # start dmenu (a program launcher)
 # bindsym $mod+d exec --no-startup-id dmenu_run
 # A more modern dmenu replacement is rofi:
-bindsym $mod+d exec "rofi -modi drun,run -show drun"
+bindsym ctrl+d exec "rofi -modi drun,run -show drun"
+bindsym ctrl+space exec "rofi -modi drun,run -show window"
 # There also is i3-dmenu-desktop which only displays applications shipping a
 # .desktop file. It is a wrapper around dmenu, so you need that installed.
 # bindcode $mod+40 exec --no-startup-id i3-dmenu-desktop
@@ -193,5 +197,11 @@ bar {
 }
 
 # Gaps
-gaps inner 6
-gaps outer 0
+gaps inner 10
+gaps outer 10
+
+# Assign workspaces
+assign [class="terminal"] 1
+assign [class="spotify"] 4
+assign [class="discord"] 4
+assign [class="firefox"] 2
