--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -1,307 +1,166 @@
-;==========================================================
-;
-;
-;   ██████╗  ██████╗ ██╗  ██╗   ██╗██████╗  █████╗ ██████╗
-;   ██╔══██╗██╔═══██╗██║  ╚██╗ ██╔╝██╔══██╗██╔══██╗██╔══██╗
-;   ██████╔╝██║   ██║██║   ╚████╔╝ ██████╔╝███████║██████╔╝
-;   ██╔═══╝ ██║   ██║██║    ╚██╔╝  ██╔══██╗██╔══██║██╔══██╗
-;   ██║     ╚██████╔╝███████╗██║   ██████╔╝██║  ██║██║  ██║
-;   ╚═╝      ╚═════╝ ╚══════╝╚═╝   ╚═════╝ ╚═╝  ╚═╝╚═╝  ╚═╝
-;
-;
-;   To learn more about how to configure Polybar
-;   go to https://github.com/polybar/polybar
-;
-;   The README contains a lot of information
-;
-;==========================================================
-
 [colors]
-background = #2d353b
-background-alt = #373B41
-foreground = #F3F5D9
-primary = #b9cef8
-pink = #f1739d
-blue = #7FBBB3
-yellow = #dbbc7f
-inactive = #859289
-secondary = #8ABEB7
-alert = #A54242
-disabled = #707880
+base = #1e1e2e
+mantle = #181825
+crust = #cc11111b
 
-# This is to set the distance between the modules
-[padding]
-modules = 20px
+text = #cdd6f4
+subtext0 = #a6adc8
+subtext1 = #bac2de
 
-# Gradient Set-up
-[gradient]
-color-1 = #9DA9A0
-color-2 = #859289 
-color-3 = #475258 
-# color 1 for clock background
-# color 2 for first modules
-# color 3 for second modules
+surface0 = #313244
+surface1 = #45475a
+surface2 = #585b70
 
-[bar/example]
+overlay0 = #6c7086
+overlay1 = #7f849c
+overlay2 = #9399b2
+
+
+blue = #89b4fa
+lavender = #b4befe
+sapphire = #74c7ec
+sky = #89dceb
+teal = #94e2d5
+green = #a6e3a1
+yellow = #f9e2af
+peach = #fab387
+maroon = #eba0ac
+red = #f38ba8
+mauve = #cba6f7
+pink = #f5c2e7
+flamingo = #f2cdcd
+rosewater = #f5e0dc
+
+transparent = #FF00000
+
+[bar/main]
 width = 100%
-height = 30 pt
-radius = 10
-# offset-y = 6
-# offset-x = 0.5%
-border-color = #00000000
-border-left-size = 15
-border-right-size = 15
-border-top-size = 15
+height = 30
+offset-y = 0
+top = true
+fixed-center = true
 
-# dpi = 96
+wm-restack = bspwm
 
 override-redirect = false
 
-background = ${colors.background}
-foreground = ${colors.foreground}
-
-line-size = 3pt
-
-# border-size = 4pt
-# border-color = #00000000
-
-padding-left = 1
-padding-right = 1
-
-module-margin = 0
-
-# separator = |
-# separator = 󰇙
-# separator-foreground = ${colors.disabled}
-
-# This character ; next to the fonts decides the vertical alignment.
-# So the bigger the number after the ; , the lower the content will be.
-
-font-0 = JetBrainsMonoNerdFont-Bold:weight=bold:size=14;2
-font-1 = JetBrainsMonoNerdFont-Bold:weight=bold:size=16;2
-font-2 = JetBrainsMonoNerdFont-Bold:weight=bold:size=32;2
-font-3 = Roboto:style=black:size=15;4
-font-4 = Roboto:style=black:size=13;2
-
-modules-left = xworkspaces usdrate eurrate xwindow
-modules-center = text5 text3 text1 date text2 text4 text6
-modules-right = filesystem pulseaudio backlight xkeyboard memory cpu wlan eth battery battery2 battery3
-
-# cursor-click = pointer
-# cursor-scroll = ns-resize
+scroll-up = next
+scroll-down = prev
 
 enable-ipc = true
 
-# tray-position = right
+background = ${colors.crust}
+foreground = ${colors.text}
 
-# wm-restack = generic
-# wm-restack = bspwm
-# wm-restack = i3
+font-0 = "JetBrainsMono Nerd Font:style=Regular:size=10;2"
+font-1 = "JetBrainsMono Nerd Font:style=Bold:size=10;2"
+font-2 = "JetBrainsMono Nerd Font:size=19;5"
+font-3 = "Material Icons Outlined:9;4"
+font-4 = "Material Icons Round:9;4"
+font-5 = "Source Han Sans CN:size=9;2"
 
-# override-redirect = true
+modules-left = date
+modules-center = nowplaying
+modules-right = updates filesystem wlan pulseaudio session
 
-[module/xworkspaces]
-type = internal/xworkspaces
-pin-workspaces = true
+tray-position = right
 
-label-active = %name%
-label-active-foreground = ${colors.yellow}
-label-active-padding = 1
+cursor-click = pointer
 
-label-occupied = %name%
-label-occupied-foreground = ${colors.inactive}
-label-occupied-padding = 1
+[bar/external]
+monitor = HDMI1
+modules-right = wlan pulseaudio margin session
+inherit = bar/main
 
-label-urgent = %name%
-label-urgent-background = ${colors.alert}
-label-urgent-padding = 1
+[settings]
+screenchange-reload = true
+format-padding = 1
 
-label-empty = %name%
-label-empty-foreground = ${colors.disabled}
-label-empty-padding = 1
-
-[module/pulseaudio]
-type = internal/pulseaudio
-
-format-volume-prefix = " "
-format-volume-prefix-foreground = ${colors.yellow}
-format-volume = <label-volume>
-
-label-volume = %percentage%%
-label-volume-padding-right = ${padding.modules}
-label-volume-padding-left = 1
-
-label-muted = muted
-label-muted-foreground = ${colors.disabled}
-label-muted-padding-right = ${padding.modules}
-label-muted-padding-left = 1
-
-# [module/xkeyboard]
-# type = internal/xkeyboard
-# blacklist-0 = num lock
-
-# label-layout = %layout%
-# label-layout-foreground = ${colors.primary}
-
-# label-indicator-padding = 2
-# label-indicator-margin = 1
-# label-indicator-foreground = ${colors.background}
-# label-indicator-background = ${colors.secondary}
-
-# [module/memory]
-# type = internal/memory
-# interval = 2
-# format-prefix = "RAM "
-# format-prefix-foreground = ${colors.primary}
-# label = %percentage_used:2%%
-
-
-[module/backlight]
-type = internal/backlight
-card = amdgpu_bl0
-use-actual-brightness = true
-enable-scroll = true
-
-format = <label>
-format-prefix = "󰃠  "
-format-prefix-foreground = ${colors.yellow}
-label = %percentage%%
-label-padding-right = ${padding.modules}
-label-font = 5
-
-[module/cpu]
-# type = internal/cpu
-# interval = 2
-# format-prefix = "CPU "
-# format-prefix-foreground = ${colors.primary}
-# label = %percentage:2%%
-
-[network-base]
-type = internal/network
-interval = 5
-format-connected = <label-connected>
-format-disconnected = <label-disconnected>
-label-disconnected = %{F#F0C674}%ifname%%{F#707880} disconnected
-
-
-[module/wlan]
-inherit = network-base
-interface-type = wireless
-format-connected-prefix = "%{F#dbbc7f}󰖩%{F-}  "
-label-connected = On
-label-connected-padding-right = ${padding.modules}
-label-connected-font = 5
-
-[module/eth]
-inherit = network-base
-interface-type = wired
-label-connected = %{F#F0C674}%ifname%%{F-} %local_ip%
-
-######################################
-#######    Date/Time Gradient  #######
-
-[module/text1]
-type = custom/text
-content = ""
-content-foreground = ${gradient.color-1}
-content-background = ${gradient.color-2}
-content-font = 3
-
-[module/text2]
-type = custom/text
-content = ""
-content-foreground = ${gradient.color-1}
-content-background = ${gradient.color-2}
-content-font = 3
-
-[module/text3]
-type = custom/text
-content = ""
-content-foreground = ${gradient.color-2}
-content-background = ${gradient.color-3}
-content-font = 3
-
-[module/text4]
-type = custom/text
-content = ""
-content-foreground = ${gradient.color-2}
-content-background = ${gradient.color-3}
-content-font = 3
-
-[module/text5]
-type = custom/text
-content = ""
-content-foreground = ${gradient.color-3}
-content-font = 3
-
-[module/text6]
-type = custom/text
-content = ""
-content-foreground = ${gradient.color-3}
-content-font = 3
-
-######################################
-#######    Date/Time Gradient  #######
+[module/nowplaying]
+type = custom/script
+tail = true
+interval = 1
+format =  <label>
+exec = playerctl metadata --format "{{ artist }} - {{ title }}"
 
 [module/date]
 type = internal/date
 interval = 1
 
-date = %H:%M
-date-alt = "  %a %d %b - %I:%M %p  "
+time = "%a, %b %d %H:%M"
 
-label = "  %date%  "
-label-foreground = ${colors.background}
-label-background = #9DA9A0
-label-font = 4
+format = <label>
+format-padding = 1
+format-prefix = %{T5}%{T-}
+format-prefix-foreground = ${colors.green}
+label = %{T1}%time%%{T-}
+label-padding = 1
 
-[module/battery]
-type = internal/battery
-battery = BAT0
-adapter = ADP0
-time-format = %H:%m
-format-charging-prefix ="%{F#dbbc7f}%{F-}  "
-label-charging = %percentage%%
-label-charging-padding-right = ${padding.modules}
-label-charging-font = 5
+[module/pulseaudio]
+type = internal/pulseaudio
+use-ui-max = false
 
-format-discharging-prefix ="%{F#dbbc7f}%{F-}  "
-label-discharging = %percentage%%
-label-discharging-padding-right = ${padding.modules}
-label-discharging-font = 5
+format-volume = <label-volume>
+format-volume-prefix = %{T4}%{T-}
+format-volume-prefix-foreground = ${colors.yellow}
+label-volume = %{T1}%percentage%%%{T-}
+label-volume-padding = 1
 
-[module/battery2]
-type = internal/battery
-battery = BAT0
-adapter = ADP0
-time-format = %H:%M
-format-charging-prefix = "%{F#dbbc7f}󰜷%{F-} "
-label-charging = %consumption%W
-label-charging-padding-right = ${padding.modules}
-label-charging-font = 5
+format-muted = <label-muted>
+format-muted-prefix = 
+format-muted-prefix-foreground = ${colors.overlay0}
+label-muted = %{T1}%percentage%%%{T-}
+label-muted-foreground = ${colors.overlay0}
+label-muted-padding = 1
 
-format-discharging-prefix = "%{F#dbbc7f}󰜮%{F-} "
-label-discharging = %consumption%W
-label-discharging-padding-right = ${padding.modules}
-label-discharging-font = 5
+click-right = pavucontrol&
 
-[module/battery3]
-type = internal/battery
-battery = BAT0
-adapter = ADP0
-time-format = %H:%M
-format-charging-prefix = "%{F#dbbc7f}%{F-}  "
-label-charging = charging
-label-charging-padding-right = 1
-label-charging-font = 5
+[module/session]
+type = custom/text
 
-format-discharging-prefix = "%{F#dbbc7f}%{F-}  "
-label-discharging = %time%
-label-discharging-padding-right = 1
-label-discharging-font = 5
+click-left = powermenu
+content = %{T4}%{T-}
+content-background = ${colors.surface1}
+content-foreground = ${colors.text}
+content-padding = 1
 
-[settings]
-screenchange-reload = true
-pseudo-transparency = true
+[module/wlan]
+type = internal/network
+interface = wlan0
+interval = 1.0
 
-; vim:ft=dosini
+format-connected-prefix = 
+format-connected-prefix-foreground = ${colors.blue}
+format-connected = <label-connected>
+label-connected = "%{A1:wifimenu:}%essid%%{A}"
+label-connected-padding = 1
+
+format-disconnected = <label-disconnected>
+format-disconnected-padding = 1
+label-disconnected = %{A1:wifimenu:}%{A}
+label-disconnected-foreground = ${colors.overlay0}
+label-disconnected-padding = 1
+
+format = <label>
+format-prefix = 
+format-prefix-foreground = ${colors.maroon}
+label = %output%
+label-padding = 1
+
+[module/filesystem]
+type = internal/fs
+
+mount-0 = /
+interval = 30
+warn-percentage = 90
+
+format-mounted-prefix = 
+format-mounted-prefix-foreground = ${colors.mauve}
+label-mounted = %free%
+label-mounted-padding = 1
+
+format-warn-prefix = 
+format-warn = <label-warn>
+label-warn = %free%
+label-warn-padding = 1
+format-warn-foreground = ${colors.red}
