--- a/i3/config
+++ b/i3/config
@@ -205,3 +205,7 @@ assign [class="kitty"] 1
 assign [class="spotify"] 4
 assign [class="discord"] 4
 assign [class="firefox"] 2
+
+# Focus on window activation
+focus_on_window_activation focus
+for_window [urgent=latest] focus
