--- a/i3/config
+++ b/i3/config
@@ -40,6 +40,9 @@ exec_always --no-startup-id ~/.config/polybar/launch.sh
 # Picom
 exec --no-startup-id picom
 
+# Set wallpaper
+exec --no-startup-id feh --bg-scale ~/.config/wallpapers/current.png
+
 # Use pactl to adjust volume in PulseAudio.
 set $refresh_i3status killall -SIGUSR1 i3status
 bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ +10% && $refresh_i3status
@@ -192,9 +195,9 @@ bindsym $mod+r mode "resize"
 
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
-bar {
-        status_command i3status
-}
+# bar {
+#         status_command i3status
+# }
 
 # Gaps
 gaps inner 10
@@ -202,10 +205,13 @@ gaps outer 10
 
 # Assign workspaces
 assign [class="kitty"] 1
-assign [class="spotify"] 4
-assign [class="discord"] 4
+assign [class="Spotify"] 4
+assign [class="discord"] 5
 assign [class="firefox"] 2
 
 # Focus on window activation
 focus_on_window_activation focus
 for_window [urgent=latest] focus
+
+# Window border
+for_window [class="^.*"] border pixel 0
