--- a/neofetch/config.conf
+++ b/neofetch/config.conf
@@ -23,7 +23,7 @@ print_info() {
     # info "Disk" disk
     # info "Battery" battery
     # info "Font" font
-    info "$(color 3)󰎈 " song
+    info "$(color 2)  " song
     # [[ "$player" ]] && prin "Music Player" "$player"
     # info "Local IP" local_ip
     # info "Public IP" public_ip
