--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -52,15 +52,12 @@ enable-ipc = true
 background = ${colors.crust}
 foreground = ${colors.text}
 
-font-0 = "JetBrainsMono Nerd Font:style=Regular:size=10;2"
-font-1 = "JetBrainsMono Nerd Font:style=Bold:size=10;2"
-font-2 = "JetBrainsMono Nerd Font:size=19;5"
-font-3 = "Material Icons Outlined:9;4"
-font-4 = "Material Icons Round:9;4"
-font-5 = "Source Han Sans CN:size=9;2"
+font-0 = "JetBrainsMono Nerd Font:style=Regular:size=16;2"
+font-1 = "JetBrainsMono Nerd Font:style=Bold:size=16;2"
+font-2 = "JetBrainsMono Nerd Font:size=16;5"
 
-modules-left = date
-modules-center = nowplaying
+modules-left = i3 nowplaying 
+modules-center = date time
 modules-right = updates filesystem wlan pulseaudio session
 
 tray-position = right
@@ -72,6 +69,54 @@ monitor = HDMI1
 modules-right = wlan pulseaudio margin session
 inherit = bar/main
 
+[module/i3]
+type = internal/i3
+pin-workspaces = true
+show-urgent = true
+strip-wsnumbers = true
+index-sort = true
+enable-click = true
+enable-scroll = false
+wrapping-scroll = false
+reverse-scroll = false
+fuzzy-match = true
+ws-num = 9 ; Number of workspaces to display
+show-all = true ; Display all workspaces (even when there isn't a window open)
+
+format = <label-state> <label-mode>
+
+label-mode = %mode%
+label-mode-padding = 1
+label-mode-foreground = #000
+label-mode-background = ${colors.primary}
+
+label-focused = %icon%
+label-focused-background = ${colors.background-alt}
+label-focused-underline = #E5E9F0
+label-focused-padding = 1
+
+label-unfocused = %icon%
+label-unfocused-padding = 1
+
+label-visible = %icon%
+label-visible-underline = #E5E9F0
+label-visible-padding = 1
+
+label-urgent = %icon%
+label-urgent-background = ${colors.alert}
+label-urgent-padding = 1
+
+ws-icon-0 = 1;
+ws-icon-1 = 2;󰈹
+ws-icon-2 = 3;󰉋
+ws-icon-3 = 4;󰎈
+ws-icon-4 = 5;󰍬
+ws-icon-5 = 6;󰄮
+ws-icon-6 = 7;󰄮
+ws-icon-7 = 8;󰄮
+ws-icon-8 = 9;󰄮
+ws-icon-9 = 10;󰄮
+
 [settings]
 screenchange-reload = true
 format-padding = 1
@@ -80,21 +125,22 @@ format-padding = 1
 type = custom/script
 tail = true
 interval = 1
-format =  <label>
+format = 󰎈 <label>
 exec = playerctl metadata --format "{{ artist }} - {{ title }}"
 
 [module/date]
 type = internal/date
 interval = 1
+date = "%d/%m/%Y"
+time = "%H:%M:%S"
+label = "%{A1:calendar:}%{F#5bb1b4}%{F-}  %date%%{A}"
+label-foreground = ${colors.secondary}
 
-time = "%a, %b %d %H:%M"
-
-format = <label>
-format-padding = 1
-format-prefix = %{T5}%{T-}
-format-prefix-foreground = ${colors.green}
-label = %{T1}%time%%{T-}
-label-padding = 1
+[module/time]
+type = internal/date
+interval = 1
+time = "%H:%M:%S"
+label = "%{F#5bb1b4}%{F-} %time%"
 
 [module/pulseaudio]
 type = internal/pulseaudio
