new tab in same cwd

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -3,7 +3,7 @@ font_family      CaskaydiaCove Nerd Font
 bold_font        auto
 italic_font      Cartograph CF Italic
 bold_italic_font Cartograph CF Bold Italic
-font_size  22
+font_size  18
 adjust_line_height  0
 adjust_column_width 0
 
@@ -44,7 +44,7 @@ listen_on unix:/tmp/mykitty
 # Tab management 
 map kitty_mod+h     previous_tab
 map kitty_mod+l     next_tab
-map kitty_mod+t     new_tab
+map kitty_mod+t     new_tab_with_cwd
 map kitty_mod+q     close_tab
 map kitty_mod+.     move_tab_forward
 map kitty_mod+,     move_tab_backward
