--- a/i3/config
+++ b/i3/config
@@ -38,7 +38,7 @@ exec --no-startup-id nm-applet
 exec_always --no-startup-id ~/.config/polybar/launch.sh 
 
 # Picom
-exec --no-startup-id picom
+# exec --no-startup-id picom
 
 # Set wallpaper
 exec --no-startup-id feh --bg-scale ~/.config/wallpapers/current.png
@@ -66,8 +66,8 @@ bindsym $mod+Shift+q kill
 # start dmenu (a program launcher)
 # bindsym $mod+d exec --no-startup-id dmenu_run
 # A more modern dmenu replacement is rofi:
-bindsym ctrl+o exec --no-startup-id ~/.config/rofi/launchers/type-1/launcher-drun.sh
-bindsym ctrl+space exec --no-startup-id ~/.config/rofi/launchers/type-1/launcher-window.sh
+bindsym $mod+o exec --no-startup-id ~/.config/rofi/launchers/type-1/launcher-drun.sh
+bindsym $mod+p exec --no-startup-id ~/.config/rofi/launchers/type-1/launcher-window.sh
 bindsym $mod+x exec --no-startup-id ~/.config/rofi/powermenu/type-4/powermenu.sh
 # There also is i3-dmenu-desktop which only displays applications shipping a
 # bindcode $mod+40 exec --no-startup-id i3-dmenu-desktop
@@ -202,8 +202,8 @@ bindsym $mod+r mode "resize"
 # }
 
 # Gaps
-gaps inner 10
-gaps outer 10
+# gaps inner 10
+# gaps outer 10
 
 # Assign workspaces
 assign [class="kitty"] 1
