--- a/lazygit/state.yml
+++ b/lazygit/state.yml
@@ -1,8 +1,8 @@
 lastupdatecheck: 0
 recentrepos:
+- /home/lewisblackburn/.config
 - /home/lewisblackburn/dev/petal
 startuppopupversion: 5
 customcommandshistory:
 - q
 hidecommandlog: false
-ignorewhitespaceindiffview: false
