--- a/lazygit/state.yml
+++ b/lazygit/state.yml
@@ -1,7 +1,8 @@
 lastupdatecheck: 0
 recentrepos:
-- /home/lewisblackburn/.config
 - /home/lewisblackburn/dev/petal
+- /home/lewisblackburn/dev/website
+- /home/lewisblackburn/.config
 startuppopupversion: 5
 customcommandshistory:
 - q
