--- a/espanso/match/coding_and_scripting.yml
+++ b/espanso/match/coding_and_scripting.yml
@@ -17,6 +17,9 @@ matches:
   - trigger: ";gitgrep"
     replace: "git rev-list --all | xargs git grep"
     word: true
+  - trigger: ";gcm"
+    replace: 'git commit -m "$|$"'
+    word: true
   - trigger: ";sso"
     replace: "site:stackoverflow.com"
     word: true
