--- a/i3/config
+++ b/i3/config
@@ -42,7 +42,7 @@ exec --no-startup-id nm-applet
 # exec --no-startup-id picom
 
 # Set wallpaper
-exec --no-startup-id feh --bg-scale ~/.config/wallpapers/current.png
+exec --no-startup-id feh --bg-scale ~/.config/wallpapers/17.png
 
 # Use pactl to adjust volume in PulseAudio.
 set $refresh_i3status killall -SIGUSR1 i3status
