--- a/espanso/match/stylisation_corrections.yml
+++ b/espanso/match/stylisation_corrections.yml
@@ -2,6 +2,9 @@ matches:
   - trigger: "macbook"
     replace: "MacBook"
     word: true
+  - trigger: "macos"
+    replace: "macOS"
+    word: true
     propagate_case: true
   - trigger: "Jetbrains"
     replace: "JetBrains"
