atm to at the moment

--- a/espanso/match/long_words_or_terms.yml
+++ b/espanso/match/long_words_or_terms.yml
@@ -763,3 +763,7 @@ matches:
     replace: "I don't know"
     word: true
     propagate_case: true
+  - trigger: 'atm'
+    replace: 'at the moment'
+    word: true
+    propagate_case: true
