easy way to copy files

--- a/espanso/match/coding_and_scripting.yml
+++ b/espanso/match/coding_and_scripting.yml
@@ -49,3 +49,5 @@ matches:
     vars:
       - name: "clipboard"
         type: "clipboard"
+  - trigger: ';cp'
+    replace: 'xclip -selection clipboard <'
