--- a/espanso/match/foreign_etymology.yml
+++ b/espanso/match/foreign_etymology.yml
@@ -40,15 +40,15 @@ matches:
     word: true
     propagate_case: true
 # Swedish character shortcuts
-  - trigger: "ae"
+  - trigger: ":ae"
     replace: "ä"
     propagate_case: true
-  - trigger: "oe"
+  - trigger: ":oe"
     replace: "ö"
     propagate_case: true
-  - trigger: "aa"
+  - trigger: ":aa"
     replace: "å"
     propagate_case: true
-  - trigger: "`e"
+  - trigger: ":`e"
     replace: "é"
     propagate_case: true
