ai to long terms list

--- a/espanso/match/long_words_or_terms.yml
+++ b/espanso/match/long_words_or_terms.yml
@@ -763,3 +763,6 @@ matches:
     replace: 'at the moment'
     word: true
     propagate_case: true
+  - trigger: 'ai'
+    replace: 'AI'
+    word: true
