--- a/espanso/match/long_words_or_terms.yml
+++ b/espanso/match/long_words_or_terms.yml
@@ -180,7 +180,7 @@ matches:
     word: true
     propagate_case: true
   - trigger: ";ai"
-    replace: "&Action item -"
+    replace: "artificial intelligence"
     word: true
     propagate_case: true
   - trigger: ";convo"
