--- a/espanso/match/long_words_or_terms.yml
+++ b/espanso/match/long_words_or_terms.yml
@@ -180,9 +180,8 @@ matches:
     word: true
     propagate_case: true
   - trigger: ";ai"
-    replace: "artificial intelligence"
+    replace: "Artificial Intelligence"
     word: true
-    propagate_case: true
   - trigger: ";convo"
     replace: "conversation"
     word: true
